[project]
name = "LOL-wujbklic-iuuz-hvig-BUG-iufaqi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "myuanz", email = "provefars@gmail.com"},
]
dependencies = [
    "opencv-python-headless>=4.10.0.84",
    "numpy<2",
    "matplotlib>=3.9.1",
    "moviepy>=1.0.3",
    "umap-learn>=0.5.6",
    "PySide6>=6.7.2",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "seaborn>=0.13.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.5",
]
